# libopencm3

./: .gitignore  CMakeLists.txt  Makefile  default.nix  flake.nix  install.sh  main.cpp  removelines.py
cmake/: stm32f4-config.cmake
